Allocation update